# LTCImplementation

./: CMakeLists.txt  Camera.h  LICENSE  LTCShadingFrag.glsl  LTCShadingVert.glsl  LTC_data.h  README.md  Shader.h  glad.c  main.cpp
include/glad/: glad.h
